--- a/Cafeine/Views/HomePage.xaml
+++ b/Cafeine/Views/HomePage.xaml
@@ -93,13 +93,8 @@
                     ScrollViewer.BringIntoViewOnFocusChange="False"
                     Style="{StaticResource FluentTextBoxStyle}"
                     Text="{x:Bind Vm.SuggestText.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Visibility="{x:Bind Vm.SearchBoxLoad.Value, Mode=OneWay}">
-                    <interactivity:Interaction.Behaviors>
-                        <core:EventTriggerBehavior EventName="TextChanged">
-                            <reactiveProperty:EventToReactiveCommand Command="{x:Bind Path=Vm.SearchBoxTextChanged}" />
-                        </core:EventTriggerBehavior>
-                    </interactivity:Interaction.Behaviors>
-                </TextBox>
+                    TextChanged="{x:Bind Vm.SearchBoxTextChanged}"
+                    Visibility="{x:Bind Vm.SearchBoxLoad.Value, Mode=OneWay}" />
                 <AppBarButton
                     x:Name="SearchButton"
                     Width="48"
