--- a/Cafeine/Views/MainPage.xaml
+++ b/Cafeine/Views/MainPage.xaml
@@ -2,17 +2,11 @@
     x:Class="Cafeine.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:conv="using:Cafeine.Models.Conversions"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:local="using:Cafeine"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mvvm="using:Cafeine.Services.Mvvm"
-    xmlns:reactiveProperty="using:Reactive.Bindings.Interactivity"
-    xmlns:views="using:Cafeine.Views"
     xmlns:vm="using:Cafeine.ViewModels"
-    xmlns:vr="using:Cafeine.Views.Resources"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     NavigationCacheMode="Enabled"
     mc:Ignorable="d">
@@ -32,6 +26,7 @@
             Margin="28,0,0,0"
             ContainerContentChanging="Collection_ContainerContentChanging"
             IsItemClickEnabled="True"
+            ItemClick="{x:Bind Vm.ItemClicked}"
             ItemContainerStyle="{StaticResource CollectionItemContainerStyle}"
             ItemTemplate="{StaticResource Collection}"
             ItemsSource="{x:Bind Vm.Library, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -75,13 +70,6 @@
                     </StackPanel>
                 </Grid>
             </GridView.Header>
-            <interactivity:Interaction.Behaviors>
-                <core:EventTriggerBehavior EventName="ItemClick">
-                    <reactiveProperty:EventToReactiveCommand Command="{x:Bind Path=Vm.ItemClicked}">
-                        <conv:ItemClickToItemLibraryModel />
-                    </reactiveProperty:EventToReactiveCommand>
-                </core:EventTriggerBehavior>
-            </interactivity:Interaction.Behaviors>
         </GridView>
     </Grid>
 </mvvm:BasePage>
