[Change] code cleanup and rearrange

--- a/Cafeine/Views/HomePage.xaml
+++ b/Cafeine/Views/HomePage.xaml
@@ -62,7 +62,7 @@
                 <AppBarButton
                     Width="48"
                     Height="48"
-                    Command="{x:Bind Path=Vm.GoBackButton}"
+                    Command="{x:Bind Path=Vm.GoBack}"
                     LabelPosition="Collapsed"
                     Style="{StaticResource ReducedAppBarButtonRevealStyle}">
                     <AppBarButton.Icon>
