[Change] User Interface overhaul [Change] Tons of code refactoring

--- a/Cafeine/Views/BrowserAuthenticationPage.xaml
+++ b/Cafeine/Views/BrowserAuthenticationPage.xaml
@@ -10,7 +10,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     mc:Ignorable="d">
     <mvvm:BasePage.DataContext>
-        <vm:BrowserAuthenticationPageViewModel />
+        <vm:BrowserAuthViewModel />
     </mvvm:BasePage.DataContext>
     <Grid>
         <Grid.RowDefinitions>
