--- a/Cafeine/Views/HomePage.xaml
+++ b/Cafeine/Views/HomePage.xaml
@@ -2,35 +2,29 @@
     x:Class="Cafeine.Views.HomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:Microsoft.UI.Xaml.Controls"
-    xmlns:conv="using:Cafeine.Models.Conversions"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:local="using:Cafeine.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:reactiveProperty="using:Reactive.Bindings.Interactivity"
     xmlns:vm="using:Cafeine.ViewModels"
-    xmlns:vr="using:Cafeine.Views.Resources"
     Background="{ThemeResource CafeineDarkBlue}"
     NavigationCacheMode="Enabled"
     mc:Ignorable="d">
     <Page.DataContext>
-        <vm:HomePageViewModel />
+        <vm:HomeViewModel />
     </Page.DataContext>
     <Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
-                <DrillInNavigationTransitionInfo/>
+                <DrillInNavigationTransitionInfo />
             </NavigationThemeTransition>
         </TransitionCollection>
     </Page.Transitions>
     <Grid x:Name="thegrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="80" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Background="{ThemeResource SystemControlAcrylicWindowBrush}">
+        <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
@@ -42,50 +36,10 @@
                 CharacterSpacing="12"
                 FontSize="12"
                 Text="Cafeine Alpha" />
-            <Pivot
-                Margin="28,0,0,0"
-                VerticalAlignment="Bottom"
-                SelectedIndex="{x:Bind Path=Vm.TabbedIndex.Value, Mode=TwoWay}"
-                Visibility="{x:Bind Path=Vm.WatchHoldPivot_Visibility.Value, Mode=OneWay}">
-                <Pivot.Resources>
-                    <Style TargetType="PivotHeaderItem">
-                        <Setter Property="FontWeight" Value="SemiBold" />
-                        <Setter Property="FontSize" Value="17" />
-                        <Setter Property="Padding" Value="8,0,8,0" />
-                    </Style>
-                </Pivot.Resources>
-                <PivotItem Header="Watching" />
-                <PivotItem Header="Completed" />
-                <PivotItem Header="Hold" />
-                <PivotItem Header="Dropped" />
-                <PivotItem Header="Planned" />
-
-            </Pivot>
             <StackPanel
-                Grid.Column="0"
-                VerticalAlignment="Bottom"
-                Orientation="Horizontal"
-                Visibility="{x:Bind Path=Vm.DetailsTab_Visibility.Value, Mode=OneWay}">
-                <AppBarButton
-                    Width="48"
-                    Height="48"
-                    Command="{x:Bind Path=Vm.GoBack}"
-                    LabelPosition="Collapsed"
-                    Style="{StaticResource ReducedAppBarButtonRevealStyle}">
-                    <AppBarButton.Icon>
-                        <FontIcon Margin="3" Glyph="&#xE0A6;" />
-                    </AppBarButton.Icon>
-                </AppBarButton>
-                <TextBlock
-                    Margin="8,0,0,0"
-                    VerticalAlignment="Center"
-                    FontSize="17"
-                    FontWeight="SemiBold"
-                    Text="{x:Bind Vm.NavigationTitle.Value, Mode=OneWay}" />
-            </StackPanel>
-            <StackPanel
+                Background="{StaticResource CafeineDarkBlue}"
+                Margin="0,14,28,0"
                 Grid.Column="1"
-                Height="80"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Bottom"
                 Orientation="Horizontal">
@@ -93,7 +47,7 @@
                     x:Name="SearchBox"
                     Width="250"
                     Height="36"
-                    Margin="0,0,6,6"
+                    Margin="6"
                     VerticalAlignment="Bottom"
                     local:FocusExtension.IsFocused="{x:Bind Vm.SearchBoxFocus.Value, Mode=TwoWay}"
                     PlaceholderText="I'm looking for..."
@@ -167,8 +121,9 @@
             </StackPanel>
         </Grid>
         <Frame
+            Canvas.ZIndex="-1"
             x:Name="contentFrame"
-            Grid.Row="1"
+            Grid.RowSpan="2"
             Content="{x:Bind Path=Vm.ChildFrame, Mode=OneWay}" />
     </Grid>
 </Page>
