--- a/Cafeine/Views/SearchPage.xaml
+++ b/Cafeine/Views/SearchPage.xaml
@@ -2,25 +2,40 @@
     x:Class="Cafeine.Views.SearchPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:conv="using:Cafeine.Models.Conversions"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:local="using:Cafeine.Views"
     xmlns:m="using:Cafeine.Models"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mvvm="using:Cafeine.Services.Mvvm"
-    xmlns:reactiveProperty="using:Reactive.Bindings.Interactivity"
     xmlns:vm="using:Cafeine.ViewModels"
-    xmlns:vr="using:Cafeine.Views.Resources"
     Background="{ThemeResource LegacyDarkBlue}"
     NavigationCacheMode="Enabled"
     mc:Ignorable="d">
     <Page.DataContext>
-        <vm:SearchPageViewModel />
+        <vm:SearchViewModel />
     </Page.DataContext>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="48"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <AppBarButton
+            VerticalAlignment="Bottom"
+            Width="48"
+            Height="48"
+            Command="{x:Bind Path=Vm.GoBack}"
+            LabelPosition="Collapsed"
+            Style="{StaticResource ReducedAppBarButtonRevealStyle}">
+            <AppBarButton.Icon>
+                <FontIcon Margin="3" Glyph="&#xE0A6;" />
+            </AppBarButton.Icon>
+        </AppBarButton>
         <StackPanel
+            Grid.RowSpan="2"
+            Grid.ColumnSpan="2"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             Opacity="0.5"
@@ -31,10 +46,10 @@
                 Glyph="&#xE11A;" />
             <TextBlock FontSize="18" Text="Ravioli ravioli..." />
         </StackPanel>
-        <ScrollViewer>
+        <ScrollViewer Grid.RowSpan="2" Grid.Column="1">
             <StackPanel
                 x:Name="results"
-                Margin="28,14,0,0"
+                Margin="14,32,0,0"
                 x:Load="{x:Bind Vm.LoadResults.Value, Mode=OneWay}"
                 Background="{ThemeResource LegacyDarkBlue}"
                 Orientation="Vertical">
