Fix a special case that can cause item stack mismatch

--- a/Cafeine/Views/ItemDetailsPage.xaml
+++ b/Cafeine/Views/ItemDetailsPage.xaml
@@ -236,6 +236,7 @@
                                 VerticalAlignment="Stretch"
                                 RelativePanel.RightOf="cover">
                                 <TextBlock
+                                    MaxWidth="500"
                                     FontSize="22"
                                     FontWeight="SemiLight"
                                     MaxLines="2"
